--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   scoped_model: ^0.3.0
   font_awesome_flutter: ^8.0.1
   http: ^0.12.0
+  sqflite: ^1.1.5
+  path_provider: ^1.1.0
 
 dev_dependencies:
   flutter_test:
